[project]
name = "hackaton"
version = "0.1.0"
description = "Tune-up of a virtual qubit with LabOne Q"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "laboneq==26.4.0",
    "matplotlib>=3.10",
    "numpy>=2.4",
    "qutip>=5.2",
]
 
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

